--- a/src/styling/style.css
+++ b/src/styling/style.css
@@ -196,14 +196,25 @@ section #home-section {
 /* Video Section End */
 
 /* BtN CSS */
-.btn-primary {
+.button {
+  border: none;
+  color: white;
+  padding: 10px 12px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+	margin: 4px 13px;
+  cursor: pointer;
+}
+.button {
 	outline: none;
 	background: transparent;
 	border: 2px solid #fff;
 	width: 20%;
 	border-radius: 50px;
 }
-.btn-primary:hover {
+.button:hover {
 	background: transparent;
 	border: 2px solid #fff;
 	border-radius: 50px;
@@ -242,6 +253,16 @@ section #home-section {
 	.content-video>p{
 		text-align: center;
 		font-size: 14px;
+	}
+	.button {
+		outline: none;
+		background: transparent;
+		border: 2px solid #fff;
+		width: 30%;
+		border-radius: 50px;
+	}
+	.banner-content {
+    margin-top: 82px;
 	}
 }
 
